# data-agent-llamaindex

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: architecture.md  local-dev.md  safety.md  semantic-config.md
examples/postgres_demo/: README.md
examples/sqlite_demo/: demo.db  semantic.yaml
examples/wow_demo/: README.md
src/data_agent_core/: __init__.py
src/data_agent_core/agents/: __init__.py  answer_agent.py  conversation_agent.py  query_agent.py
src/data_agent_core/analytics/: __init__.py  models.py  planner.py  profiler.py  runtime.py  scorer.py  semantic_inference.py  synthesizer.py  workflow.py
src/data_agent_core/api/: app.py  routes.py
src/data_agent_core/cli/: main.py
src/data_agent_core/config/: __init__.py  defaults.py  env_loader.py  loader.py  models.py
src/data_agent_core/connectors/: base.py  sqlalchemy_connector.py
src/data_agent_core/llm/: factory.py  gemini_provider.py  prompts.py
src/data_agent_core/mcp/: __init__.py  prompts.py  resources.py  server.py  tools_analysis.py  tools_chat.py  tools_ingest.py  tools_schema.py
tests/: conftest.py  test_anomalies.py  test_diagnostics.py  test_ingest.py  test_mcp_tools.py  test_overview.py  test_planner.py  test_profiler.py  test_scorer.py  test_segments.py  test_synthesizer.py  test_trends.py
tests/fixtures/: sales.csv
tests/integration/: test_api_ui.py  test_query_agent_sqlite.py
tests/unit/: test_conversation_agent.py  test_conversation_notes.py  test_env_loader.py  test_formatter.py  test_loader.py  test_summarizer.py  test_validator.py
(+34 files in other folders)
